progress on workouts

--- a/src/Scss/global/_variables.scss
+++ b/src/Scss/global/_variables.scss
@@ -1,2 +1,8 @@
 /* Colors */
 $red: #c8102e;
+$white: #fff;
+$black: #333132;
+$grey: #868686;
+
+$primary-font: 'Gotham', sans-serif;
+$secondary-font: 'United Italic Cond', sans-serif;
