--- a/src/Scss/global/_general.scss
+++ b/src/Scss/global/_general.scss
@@ -1,8 +1,49 @@
-h1 {
+body {
+    margin: 0;
+}
+h1, h2, h3 {
     font-family: 'United Italic Cond',sans-serif;
     font-weight: bold;
     letter-spacing: .02em;
     text-transform: uppercase;
+    margin: 10px 0px;
+
+}
+h1 {
     color: $red;
-    font-size: 5.25rem;
+    font-size: 84px;
+}
+
+p {
+    font-family: $primary-font;
+    font-size: 20px;
+    color: $grey;
+}
+
+.button {
+    display: inline-block;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    padding: 13px 40px;
+    color: $white;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 20px;
+    letter-spacing: .12em;
+    text-transform: uppercase;
+    border: 2px solid $red;
+    border-radius: 50px;
+    background: $red;
+    transition: 200ms ease all;
+
+    &:hover {
+        color: $white;
+        border-color: $grey;
+        background: $grey;
+    }
+
+    .outline {
+        color: $red;
+        background: $white;
+    }
 }
