--- a/src/Scss/components/_workout.scss
+++ b/src/Scss/components/_workout.scss
@@ -2,16 +2,25 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    padding: 30px;
 
     .img-container {
-        flex: 1 1 300px;
+        flex: 1 1 250px;
+        width: 200px;
+        height: 200px;
+        border-radius: 100%;
 
         img {
             object-fit: cover;
             object-position: center;
-            width: 250px;
-            height: 250px;
+            height: 100%;
+            width: 100%;
             border-radius: 100%;
         }
+    }
+
+    .data-container {
+        width: 100%;
+        padding: 30px;
     }
 }
