--- a/src/Scss/components/_workout.scss
+++ b/src/Scss/components/_workout.scss
@@ -4,11 +4,14 @@
     align-items: center;
     padding: 30px;
 
+    &.reverse {
+        flex-direction: row-reverse;
+    }
+
     .img-container {
-        flex: 1 1 250px;
-        width: 200px;
-        height: 200px;
-        border-radius: 100%;
+        flex: 0 0 250px;
+        width: 250px;
+        height: 250px;
 
         img {
             object-fit: cover;
@@ -20,7 +23,36 @@
     }
 
     .data-container {
-        width: 100%;
         padding: 30px;
+
+        ul.workout-meta {
+            display: flex;
+            margin: 20px 0px;
+            max-width: 300px;
+            li {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                text-transform: capitalize;
+                font-weight: bold;
+                border-right: 1px solid lighten($grey, 30%);
+                padding: 0px 20px;
+
+                img {
+                    height: 30px;
+                    width: auto;
+                    margin-bottom: 10px;
+                }
+                &:last-child {
+                    border-right: 0;
+                }
+                &:first-child {
+                    padding-left: 0;
+                }
+
+            }
+
+        }
     }
 }
