--- a/src/Scss/global/_general.scss
+++ b/src/Scss/global/_general.scss
@@ -1,5 +1,6 @@
 body {
     margin: 0;
+    font-family: $primary-font;
 }
 h1, h2, h3 {
     font-family: 'United Italic Cond',sans-serif;
@@ -14,10 +15,19 @@ h1 {
     font-size: 84px;
 }
 
+h2 {
+    font-size: 54px;
+}
+
 p {
-    font-family: $primary-font;
     font-size: 20px;
     color: $grey;
+}
+
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
 }
 
 .button {
@@ -31,6 +41,7 @@ p {
     line-height: 20px;
     letter-spacing: .12em;
     text-transform: uppercase;
+    text-decoration: none;
     border: 2px solid $red;
     border-radius: 50px;
     background: $red;
