--- a/src/Scss/components/_header.scss
+++ b/src/Scss/components/_header.scss
@@ -10,6 +10,8 @@ header {
     nav {
         display: flex;
         align-items: center;
+        justify-content: flex-end;
+
         ul {
             list-style: none;
             display: flex;
