--- a/src/Scss/pages/_workout.scss
+++ b/src/Scss/pages/_workout.scss
@@ -1,3 +1,35 @@
 .page-workout {
+    max-width: 900px;
+    margin: 60px auto;
 
+    .main-content {
+        display: flex;
+
+        .left-content {
+            flex: 1 1 80%;
+
+            p {
+                margin-bottom: 40px;
+            }
+        }
+        .right-content {
+            width: 300px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+
+            &>img {
+                border-radius: 100%;
+                width: 150px;
+                height: 150px;
+                object-fit: cover;
+                object-position: center
+            }
+        }
+    }
+
+    video {
+        margin-top: 30px;
+    }
 }
