--- a/src/Scss/components/_header.scss
+++ b/src/Scss/components/_header.scss
@@ -6,6 +6,11 @@ header {
     background-color: $white;
     font-family: $secondary-font;
     padding: 15px 45px;
+    z-index: 1;
+
+    @include respond-to('xxsmall') {
+        padding: 15px;
+    }
 
     nav {
         display: flex;
@@ -25,6 +30,10 @@ header {
                     line-height: 28px;
                     letter-spacing: .04em;
                     text-transform: uppercase;
+
+                    @include respond-to('xxsmall') {
+                        font-size: 24px;
+                    }
                 }
             }
         }
