--- a/src/Scss/components/_hero.scss
+++ b/src/Scss/components/_hero.scss
@@ -7,6 +7,7 @@
     height: 450px;
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: center;
 
     .hero-content {
         align-self: center;
